src/style.css
body {
  font-family: Poppins;
}

.container {
  max-width: 1920px;
  margin: auto;
}

.social-icons {
  display: flex;
  flex-direction: column;
  gap: 40px;
  font-size: 30px;
  align-items: center;
  justify-content: center;
}

.social-icons > i {
  cursor: pointer;
}

.menu-open-item-2 {
  transform: rotate(45deg);
  transition: all 0.5s ease-in;
}
.menu-open-item-3 {
  transition: all 0.5s ease-in;
  transform: translate(0, -25px) rotate(-45deg);
}

.menu {
  height: 30px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;
  cursor: pointer;
  margin-top: 50px;
  transition: all 0.5s ease-in;
}

.menu > p {
  background-color: #fff;
  width: 50px;
  height: 3px;
  transition: all 0.5s ease-in;
}

.scroll-down {
  transform: rotate(90deg);
}

/* Hide scrollbar for Chrome, Safari and Opera */

.scrollbar-hidden::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.scrollbar-hidden {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}
.btn {
  padding-block: 5px;
  padding-inline: 20px;
  border: 1px solid #e3b97a;
  font-size: clamp(11px, 4vw, 25px);
  color: #e3b97a;
}
.btn:hover {
  border: 1px solid #857152;
  color: #857152;
}

.hero-text {
  font-size: clamp(30px, 5vw, 90px);
  font-family: serif;
  font-weight: bold;
}

.gradient-text {
  background: -webkit-linear-gradient(0deg, #e3b97a90, #e3b97a);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.hero-image {
  width: clamp(200px, 60%, 600px);
}

.hero-date-line {
  width: 100px;
  height: 1px;
  background: white;
}

.header-title {
  font-size: clamp(30px, 9vw, 80px);
  font-weight: 200;
  text-align: center;
}

.header-subtitle {
  font-size: clamp(1.4rem, 3.5vw, 2rem);
}

.paragraph {
  font-size: clamp(1rem, 3vw, 1.2rem);
}

.hor-line {
  width: 50%;
  height: 1px;
  display: inline-block;
  background: white;
}

#time-container {
  display: flex;
  justify-content: space-between;
  margin-block: clamp(20px, 3vw, 150px);
}

.rotated-mintex {
}

.time {
  width: clamp(100px, 15vw, 250px);
  height: clamp(100px, 15vw, 250px);
  border-radius: 1000px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px solid #757575;
}

.time > p {
  font-size: clamp(15px, 6vw, 40px);
  text-align: center;
  display: flex;
  flex-direction: column;
}
.time > p > span {
  font-size: clamp(12px, 2.5vw, 25px);
  font-weight: 200;
}

.video {
  object-fit: cover;
  width: clamp(250px, 30vw, 500px);
  height: clamp(250px, 30vw, 500px);
  border-radius: 100%;
  box-shadow: 0px 10px 15px -3px #e3b97a40;
}

.video-icon {
  font-size: 60px;
  color: white;
}

.about-text {
  font-weight: bold;
  line-height: 1;
  color: #e3b97a;
  text-align: left;
  text-transform: uppercase;
  font-size: clamp(30px, 6vw, 80px);
}

.about-scrollable {
  margin-block: 20px;
  height: clamp(100px, 10vw, 500px);
  /* height: 25%; */
}

.about-excerpt {
  width: 80%;
  font-weight: 100;
}

.play-pause {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 50px;
  position: absolute;
  z-index: 20;
  width: 100%;
  height: 100%;
}

.video-controls {
  color: #e3b97a;
}

.join-us-card {
  background: #7c6f63;
  max-width: 60%;
  aspect-ratio: 1/1;
  border-radius: 30px;
  box-shadow: 0px 10px 15px -3px #ffba5340;
}

.card-box {
  text-align: center;
  margin: 30px;
  margin-inline: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  text-align: center;
}
.card-box:nth-child(1),
.card-box:nth-child(3) {
  border-right: 1px solid white;
}
.card-box > h3 {
  font-size: clamp(20px, 3vw, 70px);
  font-weight: bold;
}
.card-box > span {
  font-size: clamp(15px, 3vw, 30px);
}
.footer {
  position: relative;
}

.footer img {
  width: 100%;
  opacity: 0.3;
}

.footer .overlay {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  font-weight: 300;
  flex-direction: column;
  text-align: center;
  font-size: clamp(1rem, 4vw, 100px);
  display: flex;
  align-items: center;
  justify-content: center;
}

/* time-line */
.time-line-card-container {
}
.time-line {
  display: flex;
  /* height: 100vh; */
  flex-direction: column;
  align-items: center;
}
.line {
  width: 1px;
  flex-grow: 1;
  background-color: white;
}

.circle {
  width: clamp(20px, 4vw, 50px);
  height: clamp(20px, 4vw, 50px);
  border-radius: 100px;
  background-color: white;
}

.time-line-card {
  display: flex;
  flex-direction: column;
  align-items: end;
}
.time-line-time {
  font-size: (1em, 3vw, 1.7rem);
}
.time-line-date {
}
.time-line-mintex {
  /* font-size: 140px; */
  font-size: clamp(30px, 3vw, 140px);
  font-weight: 100;
  letter-spacing: clamp(10px, 1vw, 60px);
}
.time-line-card-image {
  width: clamp(200px, 50vw, 400px);
  object-fit: cover;
  border-radius: 20px;
  aspect-ratio: 12/19;
}

